Updated some things !

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -97,7 +97,7 @@
         <a href="/profile" class="profile-btn">
           <img
             style="width: 24px; border-radius: 50%"
-            src="	https://assets.leetcode.com/users/avatars/avatar_1692631513.png"
+            src="	https://i.pinimg.com/564x/5c/84/61/5c8461658d1bf838313e5a9aaf09db82.jpg"
             alt=""
           />
         </a>
