--- a/src/app/components/pages/profile/profile.component.html
+++ b/src/app/components/pages/profile/profile.component.html
@@ -2,12 +2,11 @@
   <div class="container">
     <div class="profile flex">
       <!-- <div class="flex"> -->
-      <!-- Bu chap tomondagi block -->
       <div class="user-info bg-profile">
         <div class="user-img__wrapper flex">
           <img
             style="width: 80px; border-radius: 10px"
-            src="	https://assets.leetcode.com/users/avatars/avatar_1692631513.png"
+            src="	https://i.pinimg.com/564x/5c/84/61/5c8461658d1bf838313e5a9aaf09db82.jpg"
             alt=""
           />
           <div class="user-img__title">
@@ -66,7 +65,7 @@
                 d="M13.465 3.862a3 3 0 00-2.957-.048L2.61 8.122a1 1 0 000 1.756L5 11.18v6.27c0 .59.26 1.15.74 1.491 1.216.86 3.75 2.409 6.26 2.409s5.044-1.548 6.26-2.409c.48-.34.74-.901.74-1.491v-6.27l1.4-.98v4.7a.9.9 0 101.8 0V9.572a1 1 0 00-.493-.862l-8.242-4.848zM18.82 9l-5.862 3.198a2 2 0 01-1.916 0L5.18 9l5.862-3.198a2 2 0 011.916 0L18.82 9zM17 16.687a.937.937 0 01-.413.788c-.855.565-2.882 1.774-4.587 1.774-1.705 0-3.732-1.209-4.587-1.774A.936.936 0 017 16.687V12.27l3.562 1.945a3 3 0 002.876 0L17 12.27v4.417z"
               ></path>
             </svg>
-            Najot Ta'lim</span
+            University</span
           >
           <a
             href="https://tohirjon.uz"
@@ -90,7 +89,7 @@
                 clip-rule="evenodd"
               ></path>
             </svg>
-            https://tohirjon.uz</a
+            https://example.com</a
           >
           <a
             href="https://github.com/Tohiron-Odilov"
@@ -110,7 +109,7 @@
                 clip-rule="evenodd"
               ></path>
             </svg>
-            Tohirjon-Odilov</a
+            Example</a
           >
           <a
             href="https://linkedin.com/in/tohirjon-odilov"
@@ -130,7 +129,7 @@
                 clip-rule="evenodd"
               ></path>
             </svg>
-            tohirjon-odilov</a
+            Example</a
           >
           <div class="user-edit__tag">
             <svg
